--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,55 @@
-.name_test{
-  color: red;
+.header_menu{
+background-color: grey;
+width: 100vw;
+display: flex;
+}
+.nav_header_menu{
+  display: flex;
+  width: 100%;
+}
+.ul_header_menu{
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  padding:0px;
+  margin: 0px;
+  height: 100%;
+}
+.img_header_menu{
+  height: 70px;
+}
+.right_nav_header_menu{
+width: 50%;
+}
+.left_nav_header_menu{
+width: 50%;
+display: flex;
+}
+body{
+  margin: 0px;
+}
+.li_header_menu{
+  list-style: none;
+  margin-right:20px;
+  display: flex;
+  align-items: center;
+}
+.H2_header_menu{
+  color: orange;
+  margin-left: 20px;
+}
+table{
+  border: 3px solid darkblue;
+    padding: 0px;
+    margin-left: 50px;
+    border-spacing: 0px;
+    border-collapse: collapse;
+}
+.tr_th_table_booklist{
+
+}
+.bg{
+  height: 20px;
+  width: 100%;
+  background-color: black;
 }
